<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SimpleTextCrypt</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_lock">Lock</string>
    <string name="title_activity_settings">Settings</string>
    <string name="invalid_key_error">Key length should be at least 3 characters.</string>
    <string name="invalid_key_length_error">Encryption key must be at least 8 characters long</string>
    <string name="invalid_lockscreen_password_error">Lockscreen password must be at least 8 characters long.</string>
    <string name="error_title">Error</string>
    <string name="settings_save_error">Could not save settings!</string>
    <string name="no_encryption_key_set_error">Encryption key is not set. Please check settings.</string>
    <string name="unlockButtonText">Unlock</string>
    <string name="wrong_lockscreen_password_error">The entered lockscreen password is incorrect.</string>
    <string name="encryption_key_label">Encryption Key (Use a complex key, e.g., "jn@32+iJm9")</string>
    <string name="lockscreen_password_label">Lockscreen Password</string>
    <string name="passcode_hint">Enter lockscreen password</string>
    <string name="about_title">About SimpleTextCrypt</string>
    <string name="about_copyright">Copyright © 2015–2020 Aidin Gharibnavaz</string>
    <string name="about_source">Application source code can be found at: https://github.com/aidin36/simpletextcrypt</string>
    <string name="about_license_1">SimpleTextCrypt is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
    <string name="about_license_2">SimpleTextCrypt is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</string>
    <string name="about_license_3">A copy of the GNU General Public License is distributed with SimpleTextCrypt source code. You can also find a copy at: <a href="https://www.gnu.org/licenses/gpl-3.0.html">https://www.gnu.org</a></string>
    <string name="default_passcode">Default lockscreen password is: 12345678. Default encryption key is: 1111111111</string>
    <string name="default_passcode_warning">You are using the default lockscreen password. Please change it for security.</string>
    <string name="encrypt_button_text">Encrypt</string>
    <string name="decrypt_button_text">Decrypt</string>
    <string name="copy_button_text">Copy</string>
    <string name="paste_button_text">Paste</string>
    <string name="lock_timeout_label">Keep application unlocked (in minutes)</string>
    <string name="lock_timeout_help">Application will be locked after some minutes of inactivity. Set to zero for immediate lock.</string>
    <string name="clear_button">Clear</string>
    <string name="save_button">Save</string>
    <string name="exit_button">Exit</string>
    <string name="lockscreen_password_set_hint">Custom lockscreen password is set. Enter new password to change.</string>
    <string name="clipboard_history_warning">Clipboard cleared. Disable clipboard history in device settings for full security.</string>
    <string name="clipboard_restricted">Clipboard access restricted in background</string>
</resources>
